   - bug 850 - Ipv4GlobalRouting::LookupGlobal bug
   - bug 864 - Invalid return value in UdpSocketImpl::Send and Ipv4RawSocketImpl::Send
   - bug 865 - Ipv4RawSocketImpl::RecvFrom does not return from address all the time.
   - bug 859 - Output interface estimation for the source address bound socket in IPv4 Raw socket
   - bug 857 - Link-Local Multicast handle in Ipv4 Output processing 

Known issues
------------
ns-3 builds have been known to fail on the following platforms:
  - gcc 3.3 and earlier
  - optimized builds on gcc 3.4.4 and 3.4.5
  - optimized builds on linux x86 gcc 4.0.x


Release 3.7
===========

Availability
------------
This release is immediately available from:
http://www.nsnam.org/releases/ns-allinone-3.7.tar.bz2

Supported platforms
-------------------
ns-3.7 has been tested on the following platforms:
  - linux x86 gcc 4.4.0, 4.3.2, 4.2, 4.1.1, 4.1 and 3.4.6 (debug and optimized)
  - linux x86_64 gcc 4.4.0, 4.3.2, 4.2.4, 4.2.3, 4.2.1, 4.1.3, 3.4.6 (debug and optimized)
  - MacOS X ppc gcc 4.0.x and 4.2.x (debug and optimized)
  - cygwin gcc 3.4.4 (debug only), gcc 4.3.2 (debug and optimized)

Unofficially supported platform
-------------------
- mingw gcc 3.4.5 (debug only)

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------

  a) Ad hoc On-Demand Distance Vector (AODV) routing model (RFC 3561)

  b) IPv6 extensions support to add IPv6 extensions and options.  Two 
     examples (fragmentation and loose routing) are available.

  c) NetAnim interface: Provides an interface to the Qt-based NetAnim 
     animator, which supports static, point-to-point topology-based 
     packet animations.

  d) New topology helpers have been introduced
     - PointToPointDumbbellHelper
     - PointToPointGridHelper
     - PointToPointStarHelper
     - CsmaStarHelper
